Implemented admin features and product stock management