@@ -6,15 +6,17 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
-public class JwtAuthenticationFilter extends OncePerRequestFilter {
+public class JwtAuthenticationFilter
+        extends OncePerRequestFilter {
 
     private final JwtService jwtService;
 
@@ -29,32 +31,47 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             FilterChain filterChain)
             throws ServletException, IOException {
 
-        String authHeader = request.getHeader("Authorization");
+        String authHeader =
+                request.getHeader("Authorization");
 
         // No JWT
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
+        if (authHeader == null
+                || !authHeader.startsWith("Bearer ")) {
+
             filterChain.doFilter(request, response);
             return;
         }
 
         // Extract token
-        String token = authHeader.substring(7);
-
+        String token =
+                authHeader.substring(7);
         // Validate token
         if (jwtService.isTokenValid(token)) {
 
             // Get email from token
-            String email = jwtService.extractEmail(token);
+            String email =
+                    jwtService.extractEmail(token);
+
+            // Get role from token
+            String role =
+                    jwtService.extractRole(token);
+
+            // Create authority
+            SimpleGrantedAuthority authority =
+                    new SimpleGrantedAuthority(
+                            "ROLE_" + role
+                    );
 
             // Create authenticated user
             UsernamePasswordAuthenticationToken authentication =
                     new UsernamePasswordAuthenticationToken(
                             email,
                             null,
-                            Collections.emptyList()
+                            List.of(authority)
                     );
 
-            // Tell Spring Security that this request is authenticated
+            // Tell Spring Security that this request
+            // is authenticated and has a role
             SecurityContextHolder
                     .getContext()
                     .setAuthentication(authentication);
